--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row justify-content-center">
         <div class="col-md-8 text-center">
           <h2>Prosesi Akad Nikah</h2>
-          <h3>Diselenggarakan pada kamis 27 Oktober 2024 di Desa Janapria.</h3>
+          <h3>Diselenggarakan pada Ahad 27 Oktober 2024 di Desa Janapria.</h3>
           <p>Oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang Bapak/Ibu, Saudara/i, untuk hadir
             pada acara Akad Nikah kami. </p>
         </div>
