--- a/index.html
+++ b/index.html
@@ -162,32 +162,38 @@
 
       <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center">
         <div class="col mt-3">
-          <a href="img/3.jpg" data-toggle="lightbox" data-caption="Yahya & Nia 1" data-gallery="mygallery">
-            <img src="img/3.jpg" alt="Yahya & Nia1" class="img-fluid w-100 rounded">
+          <a href="img/3.jpg" data-toggle="lightbox" data-caption="Haqqi&Muliatun" data-gallery="mygallery">
+            <img src="img/3.jpg" alt="Haqqi&Muliatun" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="img/4.jpg" data-toggle="lightbox" data-caption="Yahya & Nia 2"
+          <a href="img/jp1.jpg" data-toggle="lightbox" data-caption="Haqqi&Muliatun"
             data-gallery="mygallery">
-            <img src="img/4.jpg" alt="Yahya & Nia 2" class="img-fluid w-100 rounded">
+            <img src="img/jp1.jpg" alt="Haqqi&Muliatun" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="img/5.jpg" data-toggle="lightbox" data-caption="Yahya & Nia 3"
+          <a href="img/jp2.jpg" data-toggle="lightbox" data-caption="Haqqi&Muliatun"
             data-gallery="mygallery">
-            <img src="img/5.jpg" alt="Yahya & Nia 3" class="img-fluid w-100 rounded">
+            <img src="img/jp2.jpg" alt="Haqqi&Muliatun" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="img/6.jpg" data-toggle="lightbox" data-caption="Yahya & Nia 3"
+          <a href="img/jp3.jpg" data-toggle="lightbox" data-caption="Yahya & Nia 3"
             data-gallery="mygallery">
-            <img src="img/6.jpg" alt="Yahya & Nia 3" class="img-fluid w-100 rounded">
+            <img src="img/jp3.jpg" alt="Haqqi&Muliatun" class="img-fluid w-100 rounded">
           </a>
         </div>
         <div class="col mt-3">
-          <a href="img/2.jpg" data-toggle="lightbox" data-caption="Yahya & Nia 3"
+          <a href="img/jp4.jpg" data-toggle="lightbox" data-caption="Haqqi&Muliatun"
             data-gallery="mygallery">
-            <img src="img/2.jpg" alt="Yahya & Nia 3" class="img-fluid w-100 rounded">
+            <img src="img/jp4.jpg" alt="Haqqi&Muliatun" class="img-fluid w-100 rounded">
+          </a>
+        </div>
+        <div class="col mt-3">
+          <a href="img/6.jpg" data-toggle="lightbox" data-caption="Haqqi&Muliatun"
+            data-gallery="mygallery">
+            <img src="img/6.jpg" alt="Haqqi&Muliatun" class="img-fluid w-100 rounded">
           </a>
         </div>
       </div>
